@@ -1,15 +1,14 @@
 /**
- **
  * ***************************************************************************
  * <copyright>
- * Copyright (c) 1995, 2015 Technische Universität Berlin. All rights reserved. This program and the accompanying
- * materials are made available under the terms of the Eclipse Public License v1.0 which accompanies this distribution,
- * and is available at http://www.eclipse.org/legal/epl-v10.html
+ * Copyright (c) 1995, 2015 Technische UniversitÃƒÂ¤t Berlin. All rights
+ * reserved. This program and the accompanying materials are made available
+ * under the terms of the Eclipse Public License v1.0 which accompanies this
+ * distribution, and is available at http://www.eclipse.org/legal/epl-v10.html
  * </copyright>
- ******************************************************************************
+ * *****************************************************************************
  */
 package agg.attribute.parser.javaExpr;
-
 
 /* JJT: 0.2.2 */
 /**
@@ -30,10 +29,8 @@ public class ASTEQNode extends TYPE1xTYPE1toBOOL {
 
     public void interpret() {
         // System.out.println("ASTEQNode.interpret()... ");
-
         Node child1 = jjtGetChild(0);
         Node child2 = jjtGetChild(1);
-
         // child1.interpret();
         try {
             // System.out.println("ASTEQNode.interpret() child1: "+child1);
@@ -42,12 +39,10 @@ public class ASTEQNode extends TYPE1xTYPE1toBOOL {
             // System.out.println("ASTEQNode.interpret() ... ex: "+child1+" ::
             // "+e);
             if (e instanceof ASTMissingValueException) {
-
             } else {
                 throw (RuntimeException) e;
             }
         }
-
         // child2.interpret();
         try {
             // System.out.println("ASTEQNode.interpret() child2: "+child2);
@@ -56,37 +51,33 @@ public class ASTEQNode extends TYPE1xTYPE1toBOOL {
             // System.out.println("ASTEQNode.interpret() ... ex: "+child2+" ::
             // "+e);
             if (e instanceof ASTMissingValueException) {
-
             } else {
                 throw (RuntimeException) e;
             }
         }
-
         // System.out.println("top: "+top);
         // System.out.println("ASTEQNode.interpret() child1: "+child1);
         // System.out.println("ASTEQNode.interpret() child2: "+child2);
         Object op1Result = null;
         Object op2Result = null;
         Object result;
-
         if (top > 0) {
             op1Result = stack.get(top - 1);
             op2Result = stack.get(top);
         } else {
             op1Result = stack.get(top);
         }
-
         // System.out.println("ASTEQNode.interpret() stack[top] is Boolean: "+
         // (stack[top] instanceof Boolean));
         // System.out.println("ASTEQNode.interpret() op1Result: "+op1Result);
         // System.out.println("ASTEQNode.interpret() op2Result: "+op2Result);
         if (stack.get(top) instanceof Boolean) {
             if (op1Result instanceof Boolean && op2Result instanceof Boolean) {
-                result = new Boolean(
+                result = Boolean.valueOf(
                         ((Boolean) op1Result).booleanValue() == ((Boolean) op2Result)
                         .booleanValue());
             } else {
-                result = stack.get(top); // new Boolean(false);
+                result = stack.get(top); // Boolean.FALSE;
             }
         } else if (((SimpleNode) child1).hasNumberType()) {
             // System.out.println("ASTEQNode.interpret()
@@ -95,29 +86,29 @@ public class ASTEQNode extends TYPE1xTYPE1toBOOL {
             if (op1Result != null && op2Result != null) {
                 if (typeCode(commonType) <= typeCode(Integer.TYPE)) {
                     // System.out.println("ASTEQNode.interpret() int == int");
-                    result = new Boolean(
+                    result = Boolean.valueOf(
                             ((Number) op1Result).intValue() == ((Number) op2Result)
                             .intValue());
                 } else {
-                    result = new Boolean(
+                    result = Boolean.valueOf(
                             ((Number) op1Result).floatValue() == ((Number) op2Result)
                             .floatValue());
                 }
             } else if (op1Result == null && op2Result == null) {
-                result = new Boolean(true);
+                result = Boolean.TRUE;
             } else {
-                result = new Boolean(false);
+                result = Boolean.FALSE;
             }
         } // TEST strings
         else if (((SimpleNode) child1).hasStringType()
                 && ((SimpleNode) child2).hasStringType()) {
             // System.out.println("child1 && child2 :: hasStringType");
             if (op1Result == null && op2Result == null) {
-                result = new Boolean(true);
+                result = Boolean.TRUE;
             } else if (op1Result != null && op2Result != null) {
-                result = new Boolean(((String) op1Result).equals(op2Result));
+                result = Boolean.valueOf(((String) op1Result).equals(op2Result));
             } else {
-                result = new Boolean(false);
+                result = Boolean.FALSE;
             }
         } // TEST == null
         else if (((SimpleNode) child1).getNodeClass() != null
@@ -127,25 +118,23 @@ public class ASTEQNode extends TYPE1xTYPE1toBOOL {
             // "+child1.getString()+" op1Result = "+op1Result);
             // System.out.println("ASTEQNode TEST:: child2.getString():
             // "+child2.getString()+" op2Result = "+op2Result);
-
             if (((SimpleNode) child1).hasStringType()) {
                 // System.out.println("ASTNENode TEST:: child1.hasStringType:
                 // "+child1.hasStringType());
                 if (op1Result != null && child1.getString().equals(op1Result)) {
-                    result = new Boolean(false);
+                    result = Boolean.FALSE;
                 } else {
-                    result = new Boolean(true);
+                    result = Boolean.TRUE;
                 }
             } else if (op1Result instanceof Boolean) {
                 // System.out.println("ASTEQNode TEST:: op1Result Boolean:
                 // "+op1Result);
-                result = new Boolean(true);
+                result = Boolean.TRUE;
             } else {
                 // System.out.println("ASTEQNode TEST:: else: op1Result:
                 // "+op1Result);
-                result = new Boolean(op1Result == op2Result);
+                result = Boolean.valueOf(op1Result == op2Result);
             }
-
 //			stack[top] = result;
 //			stack.set(top, result);
             // System.out.println("ASTEQNode TEST:: stack[top] = result:
@@ -153,7 +142,6 @@ public class ASTEQNode extends TYPE1xTYPE1toBOOL {
         } else {
             result = null;
         }
-
 //		stack[top] = result;
         stack.set(top, result);
         if (top > 0) {
